# NBT_CPP

./: .gitignore  BasicConfiguration.props  CMakeLists.txt  DoxyConfig.cfg  Doxyfile  Doxyfile.config  LibraryDependencies.props  NBT_CPP.cpp  NBT_CPP.sln  NBT_CPP.vcxproj  NBT_CPP.vcxproj.filters  NBT_Print.hpp  README.md  StaticHexArray.hpp  TODO.txt  hash_tag.bat  main.cpp  msvc_init.bat  nbt_cpp dependency diagram.dgml  portfile.cmake  run_doxygen.bat  update_docs.bat  vcpkg-update-version.txt  vcpkg.json  vcpkg_test.bat
.github/workflows/: c-cpp.yml  jekyll-gh-pages.yml
NBT_CPP/: NBT_CPP.cpp  NBT_CPP.vcxproj.filters
NBT_CPP/nbt/: NBT_All.hpp  NBT_Array.hpp  NBT_Hash.hpp  NBT_List.hpp  NBT_Node_View.hpp  NBT_String.hpp
docs/: Compiler_Define.md  Compiler__Define_8h.html  Compiler__Define_8h_source.html  MUTF8_Tool.md  MUTF8__Tool_8hpp.html  MUTF8__Tool_8hpp.js  MUTF8__Tool_8hpp_source.html  NBT_All.md  NBT_Array.md  NBT_Compound.md  NBT_Endian.md  NBT_Hash.md  NBT_Helper.md  NBT_IO.md  NBT_List.md  NBT_Node.md  NBT_Node_View.md  NBT_Print.md  NBT_Reader.md  NBT_String.md  NBT_TAG.md  NBT_Type.md  NBT_Writer.md  NBT__All_8hpp.html  NBT__All_8hpp_source.html  NBT__Array_8hpp.html  NBT__Array_8hpp.js  NBT__Array_8hpp_source.html  NBT__Compound_8hpp.html  NBT__Compound_8hpp.js  NBT__Compound_8hpp_source.html  NBT__Endian_8hpp.html  NBT__Endian_8hpp.js  NBT__Endian_8hpp_source.html  NBT__Hash_8hpp.html  NBT__Hash_8hpp.js  NBT__Hash_8hpp_source.html  NBT__Helper_8hpp.html  NBT__Helper_8hpp.js  NBT__Helper_8hpp_source.html  (+317 more)
docs/html/: _compiler___define_8h_source.html  _m_u_t_f8___tool_8hpp.html  _n_b_t___all_8hpp_source.html  _n_b_t___array_8hpp_source.html  _n_b_t___compound_8hpp_source.html  _n_b_t___helper_8hpp.html  _n_b_t___helper_8hpp.js  _n_b_t___helper_8hpp_source.html  _n_b_t___i_o_8hpp.html  _n_b_t___node_8hpp_source.html  _n_b_t___node___view_8hpp_source.html  _n_b_t___print_8hpp_source.html  _n_b_t___reader_8hpp.html  _n_b_t___reader_8hpp_source.html  _n_b_t___string_8hpp.html  _n_b_t___string_8hpp.js  _n_b_t___t_a_g_8hpp_source.html  _n_b_t___type_8hpp.html  _n_b_t___type_8hpp_source.html  _n_b_t___writer_8hpp.html  class_m_u_t_f8___tool___internal_1_1_string_literal-members.html  class_m_u_t_f8___tool___internal_1_1_string_literal.html  class_m_u_t_f8___tool___internal_1_1_string_literal.js  class_n_b_t___array-members.html  class_n_b_t___compound.html  class_n_b_t___hash.html  class_n_b_t___helper-members.html  class_n_b_t___helper.html  class_n_b_t___list.html  class_n_b_t___node.html  class_n_b_t___node___view-members.html  class_n_b_t___node___view.html  class_n_b_t___string.html  class_n_b_t___writer_1_1_default_output_stream.html  class_n_b_t___writer_1_1_default_output_stream.js  concept_n_b_t___compound___concept_1_1_has_c_r_begin.html  concept_n_b_t___compound___concept_1_1_has_c_r_end.html  concept_n_b_t___compound___concept_1_1_has_r_begin.html  dir_31f767c73704db5ac2840b94bdd64c51.html  doxygen_crawl.html  (+11 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  concepts_0.js  concepts_1.js  defines_0.js  defines_1.js  defines_2.js  (+77 more)
doxygen_resource/: ROOT.md
html_docs/: _compiler___define_8h.html  _m_u_t_f8___tool_8hpp_source.html  _n_b_t___all_8hpp.html  _n_b_t___array_8hpp.html  _n_b_t___compound_8hpp.html  _n_b_t___compound_8hpp.js  _n_b_t___endian_8hpp.html  _n_b_t___endian_8hpp.js  _n_b_t___endian_8hpp_source.html  _n_b_t___hash_8hpp.html  _n_b_t___hash_8hpp_source.html  _n_b_t___i_o_8hpp.js  _n_b_t___i_o_8hpp_source.html  _n_b_t___list_8hpp.html  _n_b_t___list_8hpp.js  _n_b_t___list_8hpp_source.html  _n_b_t___node_8hpp.html  _n_b_t___node_8hpp.js  _n_b_t___node___view_8hpp.html  _n_b_t___print_8hpp.html  _n_b_t___print_8hpp.js  _n_b_t___reader_8hpp.js  _n_b_t___string_8hpp_source.html  _n_b_t___t_a_g_8hpp.html  _n_b_t___t_a_g_8hpp.js  _n_b_t___type_8hpp.js  _n_b_t___writer_8hpp_source.html  annotated.html  class_m_u_t_f8___tool-members.html  class_m_u_t_f8___tool.html  class_n_b_t___array.html  class_n_b_t___compound-members.html  class_n_b_t___compound.js  class_n_b_t___endian-members.html  class_n_b_t___endian.html  class_n_b_t___hash-members.html  class_n_b_t___i_o.html  class_n_b_t___node.js  class_n_b_t___node___view.js  class_n_b_t___print-members.html  (+58 more)
html_docs/search/: all_10.js  all_11.js  all_12.js  all_19.js  all_2.js  all_3.js  all_5.js  all_8.js  all_c.js  classes_4.js  classes_5.js  concepts_0.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_5.js  enumvalues_7.js  files_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  pages_0.js  pages_1.js  pages_4.js  related_1.js  searchdata.js  typedefs_1.js  (+9 more)
nbt/: NBT_Helper.hpp  NBT_IO.hpp  NBT_Reader.hpp  NBT_TAG.hpp  NBT_Writer.hpp
test_package/: CMakeLists.txt  test_package.vcxproj  test_package.vcxproj.filters
tests/endian_test/: CMakeLists.txt  Endian_Test.cpp  Endian_Test.vcxproj  Endian_Test.vcxproj.filters  endian_test.cpp
tests/mutf8_test/: CMakeLists.txt  MUTF8_Test.cpp  MUTF8_Test.vcxproj  MUTF8_Test.vcxproj.filters  mutf8_test.cpp  mutf8_test.vcxproj  mutf8_test.vcxproj.filters
tests/nbt_all_test/: CMakeLists.txt  nbt_all_test.cpp  nbt_all_test.vcxproj  nbt_all_test.vcxproj.filters
tests/nbt_benchmark/: CMakeLists.txt  nbt_benchmark.cpp  nbt_benchmark.vcxproj  nbt_benchmark.vcxproj.filters
tests/nbt_test/: CMakeLists.txt  NBT_Test.cpp  NBT_Test.vcxproj  NBT_Test.vcxproj.filters  compare.py  nbt_test.cpp  nbt_test.vcxproj  nbt_test.vcxproj.filters  test.bat
usage/: CMakeLists.txt  example.cpp  usage.vcxproj  usage.vcxproj.filters
(+50 files in other folders)
